Refactor MCPLaunchState